--- a/code/site/language/en-GB/en-GB.lib_anahita.ini
+++ b/code/site/language/en-GB/en-GB.lib_anahita.ini
@@ -124,8 +124,8 @@ LIB-AN-VOTE-ONE-VOTED=%s liked this
 LIB-AN-VOTE-YOU-AND-ONE-PERSON=You and %s liked this
 LIB-AN-VOTE-YOU-AND-OTHER-VOTED=You and %s other people liked this
 LIB-AN-VOTE-OTHER-VOTED=%s people liked this
-LIB-AN-VOTE-YOU-AND-OTHER-VOTED-POPOVER=You and <a data-behavior="RemotePopover" data-remotepopover-url="%s" href="#">%s other people</a> liked this
-LIB-AN-VOTE-OTHER-VOTED-POPOVER=<a data-behavior="RemotePopover" data-remotepopover-url="%s" href="#">%s people</a> liked this
+LIB-AN-VOTE-YOU-AND-OTHER-VOTED-POPOVER=You and <a data-behavior="RemotePopover" data-popover-tipclass="actors-popover" data-remotepopover-url="%s" href="#">%s other people</a> liked this
+LIB-AN-VOTE-OTHER-VOTED-POPOVER=<a data-behavior="RemotePopover" data-popover-tipclass="actors-popover" data-remotepopover-url="%s" href="#">%s people</a> liked this
 
 //LIB-AN-VOTE-ONLY-YOU-VOTED=You +1 this
 //LIB-AN-VOTE-ONE-VOTED=%s +1 this
