--- a/code/site/language/en-GB/en-GB.lib_anahita.ini
+++ b/code/site/language/en-GB/en-GB.lib_anahita.ini
@@ -117,6 +117,8 @@ LIB-AN-MEDIUM-AUTHOR=Created %s by %s
 LIB-AN-MEDIUM-EDITOR=Updated %s by %s
 LIB-AN-MEDIUM-OWNER=Owned by %s
 LIB-AN-MEDIUM-COMMENT-GUEST-MUST-LOGIN=You must be <a href="%s">logged in</a> to comment!
+LIB-AN-MEDIUM-COMMENT-NO-PERMISSION=You don't have the right permissions to comment.
+LIB-AN-MEDIUM-COMMENTS-ARE-CLOSED=Comments are closed.
 
 /* Vote */
 LIB-AN-VOTE-ONLY-YOU-VOTED=You liked this
