added comment permission refactor privacy
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15062 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/language/en-GB/en-GB.com_stories.ini
+++ b/code/site/language/en-GB/en-GB.com_stories.ini
@@ -30,6 +30,7 @@ COM-STORIES-TITLE-POST-PRIVATE-MESSAGE-WITHOUT-TARGET=%s posted a private messag
 COM-STORIES-TITLE-POST-PUBLIC-MESSAGE=%s posted a message on %s profile.
 
 /* Permission */
-COM-STORIES-PERMISSION-STORIES-PUBLISH=Who can post stories?
+COM-STORIES-PERMISSION-STORY-ADD=Who can post stories?
+COM-STORIES-PERMISSION-STORY-ADDCOMMENT=Who can comment on stories?
 
 COM-STORIES-ACTOR-ADD=%s created %s
