if a actor can't comment because not following will get a correct prompt message
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15067 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/language/en-GB/en-GB.lib_anahita.ini
+++ b/code/site/language/en-GB/en-GB.lib_anahita.ini
@@ -116,9 +116,12 @@ LIB-AN-MEDIUM-LAST-COMMENT-BY-X=Last Comment by %s
 LIB-AN-MEDIUM-AUTHOR=Created %s by %s
 LIB-AN-MEDIUM-EDITOR=Updated %s by %s
 LIB-AN-MEDIUM-OWNER=Owned by %s
-LIB-AN-MEDIUM-COMMENT-GUEST-MUST-LOGIN=You must be <a href="%s">logged in</a> to comment!
-LIB-AN-MEDIUM-COMMENT-NO-PERMISSION=You don't have the right permissions to comment.
-LIB-AN-MEDIUM-COMMENTS-ARE-CLOSED=Comments are closed.
+
+/* Comments */
+LIB-AN-COMMENT-GUEST-MUST-LOGIN=You must be <a href="%s">logged in</a> to comment!
+LIB-AN-COMMENT-NO-PERMISSION=You don't have the right permissions to comment.
+LIB-AN-COMMENTS-ARE-CLOSED=Comments are closed.
+LIB-AN-COMMENT-MUST-FOLLOW=You must follow %s in order to comment
 
 /* Vote */
 LIB-AN-VOTE-ONLY-YOU-VOTED=You liked this
