--- a/code/site/language/en-GB/en-GB.com_actors.ini
+++ b/code/site/language/en-GB/en-GB.com_actors.ini
@@ -5,6 +5,7 @@ COM-ACTORS-PROFILE-ADMINS=Admins
 COM-ACTORS-PROFILE-GENDER=Gender
 COM-ACTORS-PROFILE-EDIT=Edit Profile
 COM-ACTORS-PROFILE-HEADER-EDIT=Edit %s's Profile
+COM-ACTORS-PROFILE-ACTORBAR-TITLE=%s's Profile
 COM-ACTORS-PROFILE-EDIT-TAB-PROFILE=Info
 COM-ACTORS-PROFILE-EDIT-PROFILE-INFORMATION=Edit Information
 COM-ACTORS-PROFILE-INFO-BASIC=Basic
