cleaned up actor bar the untranslated tag fallbacks to the com_actors language
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@15591 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/language/en-GB/en-GB.com_actors.ini
+++ b/code/site/language/en-GB/en-GB.com_actors.ini
@@ -82,3 +82,9 @@ COM-ACTORS-TITLE-FOLLOW-ACTIVITY-NOTIFICATION=%s is following %s stories.
 COM-ACTORS-TITLE-FOLLOW-REQUEST=%s has requested to follow %s
 COM-ACTORS-TITLE-FOLLOW-REQUEST-NOTIFICATION=%s has <a href="%s">requested</a> to follow %s stories.
 COM-ACTORS-VIEW-REQUEST=View Request
+
+/* Actorbar Navigation Tittle */
+COM-ACTORS-NAV-TITLE-FOLLOWING=Actors %s is following
+COM-ACTORS-NAV-TITLE-ADMINISTERING=Actors %s is administering
+COM-ACTORS-NAV-FILTER-FOLLOWING=Following
+COM-ACTORS-NAV-FILTER-ADMINISTERING=Administering
