--- a/code/site/language/en-GB/en-GB.lib_anahita.ini
+++ b/code/site/language/en-GB/en-GB.lib_anahita.ini
@@ -116,6 +116,7 @@ LIB-AN-MEDIUM-LAST-COMMENT-BY-X=Last Comment by %s
 LIB-AN-MEDIUM-AUTHOR=Created %s by %s
 LIB-AN-MEDIUM-EDITOR=Updated %s by %s
 LIB-AN-MEDIUM-OWNER=Owner %s
+LIB-AN-MEDIUM-COMMENTED=Comment: %s
 
 /* Comments */
 LIB-AN-COMMENT-GUEST-MUST-LOGIN=You must be <a href="%s">logged in</a> to comment!
