added LIB-AN-ACTION-NEW lable
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@16378 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/language/en-GB/en-GB.lib_anahita.ini
+++ b/code/site/language/en-GB/en-GB.lib_anahita.ini
@@ -67,6 +67,7 @@ LIB-AN-ACTION-UNVOTE=Unlike
 LIB-AN-ACTION-COMMENT=Comment
 LIB-AN-ACTION-CONFIRM=Confirm
 LIB-AN-ACTION-ADD=Add
+LIB-AN-ACTION-NEW=New
 LIB-AN-ACTION-CREATE=Create
 LIB-AN-ACTION-EDIT=Edit
 LIB-AN-ACTION-DELETE=Delete
