--- a/code/site/language/en-GB/en-GB.com_notes.ini
+++ b/code/site/language/en-GB/en-GB.com_notes.ini
@@ -12,6 +12,7 @@ COM-NOTES-COMPOSER-PRIVATE-FLAG=Post privately
 
 COM-NOTES-ADD-NOTE=%s posted a note on %s profile.
 COM-NOTES-ADD-NOTE-NOTIFICATION=%s posted a <a href="%s">note</a> on %s profile.
+COM-NOTES-VIEW-POST=View Note
 
 /* Permission */
 COM-NOTES-PERMISSION-NOTE-ADD=Who can post a note on your profile?
