fixed bug regarding firefox
git-svn-id: file:///var/www/svn/anahita/anahita/trunk@17407 a933e228-e664-4d3f-8241-49479697c698

--- a/code/site/language/en-GB/en-GB.com_notes.ini
+++ b/code/site/language/en-GB/en-GB.com_notes.ini
@@ -3,7 +3,7 @@ COM-NOTES-HEADER=Notes
 COM-NOTES-HEADER-NOTES=%s's Notes
 
 /* Comment */
-COM-NOTES-STORY-COMMENT=%s commented on a note on %s profile.
+COM-NOTES-STORY-COMMENT=%s commented on a <a href="%s">note</a> on %s profile.
 
 /* Composer */
 COM-NOTES-COMPOSER-NOTE=Note
