--- a/code/site/language/en-GB/en-GB.mod_viewer.ini
+++ b/code/site/language/en-GB/en-GB.mod_viewer.ini
@@ -2,3 +2,4 @@ MOD-VIEWER-MENU-PROFILE=Profile
 MOD-VIEWER-MENU-EDIT-PROFILE=Edit Profile
 MOD-VIEWER-MENU-LOGOUT=Logout
 MOD-VIEWER-NOTIFICATIONS=Notifications
+MOD-VIEWER-LOGIN=Login
